--- a/Q1/Q1.ipynb
+++ b/Q1/Q1.ipynb
@@ -206,29 +206,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "und_adjacency_matrix = np.zeros((num_nodes, num_nodes))\n",
+    "und_adjacency_matrix = np.zeros((num_nodes, num_nodes)) #forming the undirected version of the same graph\n",
     "for edge in edge_list:\n",
     "    node1_num = edge[0]\n",
     "    node2_num = edge[1]\n",
     "    und_adjacency_matrix[node1_num][node2_num] = 1\n",
     "    und_adjacency_matrix[node2_num][node1_num] = 1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 366,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a, b = np.unique(und_adjacency_matrix, return_counts=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
