--- a/Q1/Q1.ipynb
+++ b/Q1/Q1.ipynb
@@ -101,7 +101,7 @@
     "    node2_id = int(split1[1][:(len(split1[1]) - 1)]) #nodeID_2 (To NodeID)\n",
     "    node1_num = node_id_to_num[node1_id] #get node_num for the nodeID\n",
     "    node2_num = node_id_to_num[node2_id] #get node_num for the nodeID\n",
-    "    edge_list.append([node1_num, node2_num])\n",
+    "    edge_list.append([node1_num, node2_num]) #adding edge to edgelist\n",
     "    adjacency_matrix[node1_num][node2_num] = 1 #[directed graph]"
    ]
   },
